--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -16,8 +16,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    - name: Flutter CLI
-      uses: steebchen/flutter@v1.0.0
+    - name: Flutter action
+      uses: subosito/flutter-action@v1.3.2
     - name: Install dependencies
       run: pub get
     - name: Run tests
