--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -11,8 +11,8 @@ jobs:
 
     runs-on: ubuntu-latest
 
-    container:
-       image:  google/dart:latest
+#     container:
+#        image:  google/dart:latest
 
     steps:
     - uses: actions/checkout@v1
@@ -21,6 +21,8 @@ jobs:
         java-version: '12.x'
     - uses: subosito/flutter-action@v1
       with:
-        flutter-version: '1.7.8+hotfix.4'
+        flutter-version: '1.7.x'
+    - run: dart --version
+    - run: flutter --version
     - run: flutter pub get
     - run: flutter test
