--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -21,7 +21,7 @@ jobs:
         java-version: '12.x'
     - uses: subosito/flutter-action@v1
       with:
-        flutter-version: '1.7.x'
+        flutter-version: '1.11.0'
     - run: dart --version
     - run: flutter --version
     - run: flutter pub get
